# rockman

./: .gitignore  Dockerfile  MANIFEST.in  README.md  README.rst  deploy.sh  docker-compose.yml  manage.py  requirements.txt  setup.cfg  setup.py  tox.ini
docker/test/: test.properties
jenkins/: deploy.sh  nginx.conf  supervisor.conf
rockman/: processor.py  server.py  settings.py  urls.py  wsgi.py
rockman/base/: extensions.py  views.py
rockman/base/templates/: 500.html  base.html  home.html  navbar.html  under_construction.html
rockman/blog/: urls.py  views.py
rockman/blog/templates/zinnia/: base.html  skeleton.html
rockman/gallery/: urls.py  views.py
rockman/gallery/templates/: gallery.html  photologue_base.html  photos.html
rockman/meals/: admin.py  models.py  urls.py
rockman/meals/migrations/: 0001_initial.py
rockman/services/: http.py
rockman/todo/: models.py  urls.py  views.py
rockman/todo/migrations/: 0002_auto_20150217_1826.py  0003_auto_20150217_1833.py  0004_auto_20150217_2332.py
rockman/todo/templates/: todo.html  update_todo.html  view_todo.html
src/: LICENSE  MANIFEST.in  newrelic.ini  requirements.txt  setup.cfg  setup.py  test-requirements.txt
src/rockman/: gunicorn.py  processor.py  server.py  settings.py  urls.py  wsgi.py
src/rockman/base/: auth_pipeline.py  urls.py
src/rockman/base/templates/: footer.html  home.html  navbar.html
src/rockman/gallery/: urls.py  views.py
src/rockman/meals/: __init__.py  views.py
src/rockman/services/: http.py
src/rockman/todo/: admin.py  models.py  tests.py  urls.py  views.py
(+17 files in other folders)
