[bdist_wheel]
universal=1

[pytest]
python_files=test*.py,unittest*.py

[flake8]
ignore = E121,E122,E123,E124,E125,E126,E127,E128,E129,E131,E501,E701
exclude = rockman_tests/*,tests
format = pylint

[metadata]
name = rockman
author = Kyle & Emily Rockman
author_email = ['zoe.rockman@gmail.com']
summary = The personal website for Kyle & Emily Rockman
keywords = family blog
url = https://github.com/ehyane/rockman
description-file = README.rst
license-file = LICENSE
classifiers = 
        Environment :: Console
        Intended Audience :: Developers
        Intended Audience :: Information Technology
        License :: OSI Approved :: Apache Software License
        Operating System :: OS Independent
        Programming Language :: Python
        Programming Language :: Python :: 2 :: Only

[files]
packages = 
    rockman

[entry_points]
console_scripts =
    rockman = rockman.server:main

[pbr]
warnerrors = True

[egg_info]
tag_build = 
tag_date = 0
tag_svn_revision = 0

